--- a/style.css
+++ b/style.css
@@ -9,40 +9,35 @@ body {
 }
 
 #hero-section {
-  /* border-bottom: 1px solid white; */
-  height: 424px;
+  height: 700px;
   background-image: linear-gradient(rgb(0 0 0 / 0%), rgb(0 0 0)),
     url(imgs/hero-img.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-#hero-txt {
   display: flex;
-  height: 423px;
   flex-direction: column;
   justify-content: end;
   align-items: center;
   color: rgba(255, 255, 255, 0.637);
-  text-shadow: -3px -3px 0px rgb(255 255 255);
+  text-shadow: -4px -4px 0px rgb(255 255 255);
   font-size: xx-large;
 }
 
-#hero-txt h1 {
+#hero-section h1 {
   margin-top: 0px;
   margin-bottom: 0px;
 }
 
-#hero-txt h2 {
-  margin-top: 32px auto;
+#hero-section h2 {
+  margin-bottom: 0px;
 }
 
 #middle-section {
   text-shadow: 4px 6px 12px white;
   color: white;
   margin: 0 auto;
-  height: 100%;
+  height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -81,23 +76,28 @@ body {
 }
 
 #card {
-  margin: 11px auto;
-  border-bottom: 11px solid black;
+  margin: 0 auto;
   border-radius: 14px;
-  width: 427px;
+  width: 493px;
+  height: 466px;
   background-color: rgb(41 109 188 / 0%);
   display: flex;
-  height: 277px;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
+  text-align: center;
 }
 
 #card img {
-  width: 211px;
-  height: 250px;
+  width: 215px;
+  height: 314px;
 }
 
 #card-txt p {
   width: 200px;
+}
+
+#card-txt #note {
+  font-style: italic;
+  font-weight: 600;
 }
